--- a/Homework/Assign5GriffinLane.rmd
+++ b/Homework/Assign5GriffinLane.rmd
@@ -1,67 +1,59 @@
 ---
-title: "Assignment 5"
+title: "Assigment5"
 author: "Griffin J. Lane"
-date: "October 9, 2017"
+date: "October 10, 2017"
 output: html_document
 ---
-
-##1.
-###a. Import the .txt file into R
+##1. ###a. Import the .txt file into R
 ```{r}
-df <- read.csv2("yob2016.txt", sep = ";") #read.csv2 can handle .txt extensions
+df <- read.csv2("C:/Users/Griff/OneDrive/Documents/!_SKOOL/Doing Data Science/Datasets/yob2016.txt", sep = ";") #read.csv2 can handle .txt extensions
 names(df) <- c("Name", "Sex", "NameCount")
 ```
-
 ###b. Display the summary and structure of df
 ```{r}
 summary(df)
 str(df)
 ```
-
 ###c. Write an R command to figure out which name is repeated and display it
 ```{r}
 mistake <- grep('[yY]{3}$', df$Name, value = TRUE)
 ```
-
 ###d. Please remove this particular observation
 ```{r}
 df<- df[df$Name != mistake,,]
 ```
 
-##2.
-###a. Import the .txt file into R
+##2. ###a. Import the .txt file into R
 ```{r}
-df2 <- read.csv2("yob2015.txt", sep = ",") 
+df2 <- read.csv2("C:/Users/Griff/OneDrive/Documents/!_SKOOL/Doing Data Science/Datasets/yob2015.txt", sep = ",") 
 names(df2) <- c("Name","Sex", "NameCount")
 ```
-
 ###b. Display the last ten rows in the dataframe. Describe.
 ```{r}
 tail(df2,10)
 ##All of the names listed are males with 5 occurrences of their name
 ```
-
 ###c. Merge y2016 and y2015 by your Name column; assign it to final
 ```{r}
 final <- merge(df,df2, by = "Name", na.rm = TRUE)
 ```
 
-##3.
-###a.  Create a new column called “Total” in final that adds the amount of children in 2015 and 2016 together.
+##3. ###a. Create a new column called “Total” in final that adds the amount of children in 2015 and 2016 together.
 ```{r}
 final$Total <- final$NameCount.x+final$NameCount.y
 ```
-
 ###.b Sort the data by Total and report the top ten names
 ```{r}
 final <- final[order(final$Total, decreasing = TRUE),]
 names(final) <-  c("Name", "Sex2015","NameCount2015","Sex2016","NameCount2016","Total")
 head(final,10)
 ```
-
 ###c. Omit boys and give the top 10 most popular girl’s names
 ```{r}
 girls <- final[final$Sex2015=="F" & final$Sex2016 == "F",]
 girls <- data.frame(Names=girls$Name,Total=girls$Total)
+head(girls,10)
+
+##writing to file
 write.csv(head(girls,10), "TopGirlNames2015-2016.csv")
 ```
